# notebooklm-watermark-remover

./: .gitattributes  .gitignore  BUILD_INTEL_MAC.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
assets/templates/: README.md
packaging/: fetch_ffmpeg.py  launch_gui.py  make_dmg.sh  make_icon.py  nlmclean.spec  windows_installer.iss
src/nlmclean/: __init__.py  __main__.py  cli.py
src/nlmclean/core/: dispatch.py  image.py  imgio.py  inpaint.py  job.py  pdf.py  pptx.py  region.py  video.py
src/nlmclean/detect/: __init__.py  heuristic.py  mask.py  profiles.py  template.py  universal.py
src/nlmclean/ffmpeg/: locate.py  probe.py  runner.py
src/nlmclean/gui/: app.py  file_table.py  inspect.py  main_window.py  media_preview.py  output_panel.py  output_window.py  preview_dialog.py  settings_dialog.py  util.py  workers.py
tests/: conftest.py  helpers.py  make_fixtures.py  test_detect.py  test_gui.py  test_image.py  test_mask.py  test_pdf.py  test_pptx.py  test_region.py  test_universal.py  test_video.py
